fixed gap on about me page

--- a/src/App.css
+++ b/src/App.css
@@ -259,7 +259,7 @@ body {
   max-width: 70rem;
   font-family: "Roboto Mono", serif;
   font-size: 20px;
-  gap: 3.4rem;
+  gap: 1.5rem;
 }
 
 .about-text {
